syntax = "proto3";

package employee_service.requests.device.delete_device;

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/device";

message DeleteDeviceRequest {
    int64 id = 1;
}